--- a/viikko2/9-12/Verkkokauppa1/build.gradle
+++ b/viikko2/9-12/Verkkokauppa1/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
     def springVersion = '5.2.9.RELEASE'
     testImplementation 'junit:junit:4.13'
+    testCompile 'org.mockito:mockito-core:3.1.0'
     implementation 'com.google.guava:guava:29.0-jre'
     compile group: 'org.springframework', name: 'spring-core', version: springVersion
     compile group: 'org.springframework', name: 'spring-context', version: springVersion
